--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.2"
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "svelte-fa": "^4.0.2"
   }
 }
